se modifica a pantalla scroll, se arregla imagen, estructura

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,140 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Karen Quezada</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"> -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Open+Sans+Condensed:300|Raleway|Titillium+Web"
+        rel="stylesheet">
+
+    <link href="../css/style.css" rel="stylesheet">
+
+    <title>Karen Quezada</title>
 </head>
 
 <body>
+
+    <header class="navbar-fixed">
+        <nav class="rose-4">
+            <div class="nav-wrapper container">
+                <a href="#inicio" class="brand-logo left">Karen</a>
+                <ul class="right">
+                    <li class="hoverable"><a href="#proyectos">Sobre Mi</a></li>
+                    <li class="hoverable"><a href="#contacto">Mis Proyectos</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <div class="parallax-container">
+        <div class="parallax">
+          <img class="col m6 s12 right" src="../css/img/picone.jpg">
+        </div>
+      </div>
+      <div class="section white">
+            <h4 id="avoutMe">Sobre Mi</h4>
+      <p>Soy una profesional de diseño gráfico y audiovisual, me apasiona el mundo tech por lo que el área front-end es un mundo inspirador y con mucho retos, me gusta la programación y creación de nuevas plataformas que 
+      faciliten la vida de la personas, estar involucrada en el desarrollo de una solución ante una problemática del mundo actual, es un desafio enriquecedor tanto por el aprendizaje adqueridos en estos proyectos como también para el desarrollo 
+      de mis habilidades humanitarias.
+      </p>
+        </div>
+      <div class="parallax-container">
+        <div class="parallax">
+            <img class="col m6 s12 right" src="../css/img/screen.png">
+          </div>
+      </div>
+      <div class="section white" id="white">
+          <h4 id="mdo">Mis Herramientas</h4>
+          <div id= toolsBox>
+              <img class="tools" src="../css/Illustrator-icon.png">
+              <img class="tools" src="../css/afterEffect.png">
+              <img class="tools" src="../css/css.png">
+              <img class="tools" src="../css/github.png">
+              <img class="tools" src="../css/html.png">
+              <img class="tools" src="../css/javascript.png">
+              <img class="tools" src="../css/react_logo_png.png">
+            </div>
+      </div>
+
+      <div class="section white">
+          <div class="row container">
+            <h2 class="header">Mis Proyectos</h2>
+            <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+          </div>
+        </div>    
+
+    <footer class="page-footer  white">
+
+        <div class="row container center">
+
+            <div class="col s12 m4 ">
+                <p class="valign-wrapper grey-text text-darken-4">
+                    <a href="https://mail.google.com" target="_blank">
+                        <ion-icon class="teal-text text-darken-1 " name="mail"></ion-icon>
+                    </a>
+                    karenquezada.16@gmail.com
+                </p>
+            </div>
+
+
+            <div class="col s12 m4">
+                <p class="valign-wrapper grey-text text-darken-4 ">
+                    <a href="https://github.com/KarenQuezadaMejia" target="_blank">
+                        <ion-icon class="teal-text text-darken-1 " name="logo-github"></ion-icon>
+                    </a>
+                    github.com/KarenQuezada
+                </p>
+            </div>
+
+            <div class="col s12 m4 ">
+                <p class="valign-wrapper grey-text text-darken-4">
+                    <a href="https://www.linkedin.com" target="_blank">
+                        <ion-icon class="teal-text text-darken-1 " name="logo-linkedin"></ion-icon>
+                    </a>
+                    linkedin.com
+                </p>
+            </div>
+
+
+        </div>
+
+
+
+        <div class="rose-4">
+            <div class="container ">
+                © 2019 Copyright Karen Quezada
+            </div>
+        </div>
+
+    </footer>
+
+
+    <script src="main.js"></script>
+
+    <!-- <script type="text/javascript" src="wow.min.js"></script>
+        <script>new WOW().init()</script>    -->
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://unpkg.com/ionicons@4.5.5/dist/ionicons.js"></script>
+
+
+
+</body>
+
+</html>
+
+
 <!--   <nav id="top" class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">quezadakaren16@gmail.com</a>
         <ul class="nav nav-pills">
@@ -23,7 +148,7 @@
         </ul>
   </nav>
  -->
- <nav id="navbar-example2" class="navbar navbar-light bg-light">
+ <!-- <nav id="navbar-example2" class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="#">Karen Quezada</a>
     <ul class="nav nav-pills">
       <li class="nav-item">
@@ -84,11 +209,4 @@
     <h5 id="four">Burguer Queen</h4>
       <img src="" alt="imagen">
   </div>
-</div>
-<script src="main.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-</body>
-</html>
+</div> -->
