se cambia ruta html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -36,7 +36,7 @@
 
     <div class="parallax-container">
         <div class="parallax">
-          <img class="col m6 s12 right" src="../css/img/picone.jpg">
+          <img class="col m6 s12 right" src="./css/img/picone.jpg">
         </div>
       </div>
       <div class="section white">
@@ -48,7 +48,7 @@
         </div>
       <div class="parallax-container">
         <div class="parallax">
-            <img class="col m6 s12 right" src="../css/img/screen.png">
+            <img class="col m6 s12 right" src="./css/img/screen.png">
           </div>
       </div>
       <div class="section white" id="white">
