--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./css/style.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css"> -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -28,7 +28,9 @@
                 <a href="#inicio" class="brand-logo left">Karen</a>
                 <ul class="right">
                     <li class="hoverable"><a href="#AboutMe">Sobre Mi</a></li>
-                    <li class="hoverable"><a href="#Contact">Mis Proyectos</a></li>
+                    <li class="hoverable"><a href="#myTools">Mis Herramientas</a></li>
+                    <li class="hoverable"><a href="#myProjects">Mis Proyectos</a></li>
+                    <li class="hoverable"><a href="#Contact">Contáctame</a></li>
                 </ul>
             </div>
         </nav>
@@ -39,8 +41,8 @@
           <img class="col m6 s12 right" src="./css/img/picone.jpg">
         </div>
       </div>
-      <div class="section white">
-            <h4 id="#AboutMe">Sobre Mi</h4>
+      <div class="text" id="AboutMe">
+            <h4>Sobre Mi</h4>
       <p>Soy una profesional de diseño gráfico y audiovisual, me apasiona el mundo tech por lo que el área front-end es un mundo inspirador y con mucho retos, me gusta la programación y creación de nuevas plataformas que 
       faciliten la vida de la personas, estar involucrada en el desarrollo de una solución ante una problemática del mundo actual, es un desafio enriquecedor tanto por el aprendizaje adqueridos en estos proyectos como también para el desarrollo 
       de mis habilidades humanitarias.
@@ -51,7 +53,7 @@
             <img class="col m6 s12 right" src="./css/img/screen.png">
           </div>
       </div>
-      <div class="section white" id="white">
+      <div class="text" id="myTools">
           <h4 id="mdo">Mis Herramientas</h4>
           <div id= toolsBox>
               <img class="tools" src="https://i.ibb.co/41ks5cB/after-Effect.png">
@@ -64,16 +66,14 @@
             </div>
       </div>
 
-      <div class="section white">
-          <div class="row container">
-            <h2 class="header">Mis Proyectos</h2>
+      <div class="text" id="myProjects">
+            <h4 class="header">Mis Proyectos</h4>
             <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
-          </div>
-        </div>    
+    </div>
 
     <footer class="page-footer  white">
 
-        <div class="row container center">
+        <div class="row container center" id="Contact">
 
             <div class="col s12 m4 ">
                 <p class="valign-wrapper grey-text text-darken-4">
@@ -197,7 +197,6 @@
         <img class="tools" src="../css/javascript.png">
         <img class="tools" src="../css/react_logo_png.png">
       </div>
-
       <h4 id="mdo">Mis Proyectos</h4>
       <p>El desarrollo de los siguientes proyectos se realizaron con el requirimiento de desarrollar mis habilidades técnicas.
         </p>
