--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     
             <div class="rose-4">
                 <div class="container center">
-                    Karen Quezada
+                    <br>Karen Quezada
                     <br>© 2019 Copyright
                 </div>
             </div>
