se corrige url y tamao mobile

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="carousel-item green white-text" href="#three!" id="third">
           <h2>Social-Network</h2>
           <p class="white-text"><a href="https://github.com/KarenQuezadaMejia/SCL008-Social-Network" target="_blank" class="enlace">Código</a></p>
-          <p class="white-text"><a href="https://josefin-ferrada.github.io/SCL008-data-lovers/src/index.html" target="_blank" class="enlace">Ver Demo</a></p>
+          <p class="white-text"><a href="https://karenquezadamejia.github.io/SCL008-Social-Network/src/index.html" target="_blank" class="enlace">Ver Demo</a></p>
         </div>
         <div class="carousel-item blue white-text" href="#four!" id="fourth">
           <h2>Visitors</h2>
@@ -99,7 +99,7 @@
 
   <div class="text" id="myTools">
     <h4>Mis Herramientas</h4>
-    <div id=toolsBox>
+    <div id=toolsBox style="opacity: 0.9;">
       <img class="tools" src="https://i.ibb.co/41ks5cB/after-Effect.png">
       <img class="tools" src="https://i.ibb.co/j3JZFRx/css.png">
       <img class="tools" src="ttps://i.ibb.co/nz355sN/github.png">
