icono y text justify

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="./css/img/icono.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -40,7 +41,7 @@
     <article id="aboutMe" style="margin: 0px 30px; padding:0px;">
             <div class="text" id="about" style="padding-top: 80px;">
                 <h4>Sobre Mi</h4>
-                <p style="padding-bottom:30px; font-weight: bold!important;">
+                <p style="padding-bottom:30px; font-weight: bold!important; text-align: justify !important;">
                     Soy una profesional de diseño gráfico y audiovisual, me apasiona el mundo tech por lo que el área
                     front-end es
                     un mundo inspirador y con mucho retos, me gusta la programación y creación de nuevas plataformas que
