modif background img

--- a/index.html
+++ b/index.html
@@ -41,16 +41,12 @@
     <article id="aboutMe" style="margin: 0px 30px; padding:0px;">
             <div class="text" id="about" style="padding-top: 80px;">
                 <h4>Sobre Mi</h4>
-                <p style="padding-bottom:30px; font-weight: bold!important; text-align: justify !important;">
+                <p style="padding-bottom:30px; font-weight: bold !important; text-align: justify !important;">
                     Soy una profesional de diseño gráfico y audiovisual, me apasiona el mundo tech por lo que el área
-                    front-end es
-                    un mundo inspirador y con mucho retos, me gusta la programación y creación de nuevas plataformas que
+                    front-end es un mundo inspirador y con mucho retos, me gusta la programación y creación de nuevas plataformas que
                     faciliten la vida de la personas, estar involucrada en el desarrollo de una solución ante una
-                    problemática del
-                    mundo actual, es un desafio enriquecedor tanto por el aprendizaje adqueridos en estos proyectos como
-                    también
-                    para el desarrollo
-                    de mis habilidades humanitarias.
+                    problemática del mundo actual, es un desafio enriquecedor tanto por el aprendizaje adqueridos en estos proyectos como
+                    también para el desarrollo de mis habilidades humanitarias.
                 </p>
             </div>
     </article>
@@ -133,26 +129,26 @@
     <article class="text" id="myTools">
         <h4>Mis Herramientas</h4>
         <div id="toolsBox">
-            <img class="tools" src="https://i.ibb.co/Y8w1zTr/after-Effect2.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/f4RFcb0/ai.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/XbnBKtB/boots.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/F7gCRLc/corel-Draw.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/r5yMf3n/css.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/JK7J8t9/figma.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/34Z82sZ/materialize.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/DkStgZV/firebaseb.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/jvhJQwv/git.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/4YR9sqt/github.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/Qm8FDLj/html.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/CVD3Vjm/Indesign.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/Pw5ynbR/js.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/mtYpGHd/lightr.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/TYbJHpw/photosh.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/rkH3DFB/premiere.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/PTjnM4h/react.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/x2cXX7v/wordp.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/xJFcj5T/xd.png" style="width: 100px; margin: 10px;">
-            <img class="tools" src="https://i.ibb.co/CzZd0jy/maya2.png" style="width: 100px; margin: 10px;">
+            <img class="tools" src="https://i.ibb.co/Y8w1zTr/after-Effect2.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/f4RFcb0/ai.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/XbnBKtB/boots.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/F7gCRLc/corel-Draw.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/r5yMf3n/css.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/JK7J8t9/figma.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/34Z82sZ/materialize.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/DkStgZV/firebaseb.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/jvhJQwv/git.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/4YR9sqt/github.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/Qm8FDLj/html.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/CVD3Vjm/Indesign.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/Pw5ynbR/js.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/mtYpGHd/lightr.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/TYbJHpw/photosh.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/rkH3DFB/premiere.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/PTjnM4h/react.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/x2cXX7v/wordp.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/xJFcj5T/xd.png" style="width: 75px; margin: 5px;">
+            <img class="tools" src="https://i.ibb.co/CzZd0jy/maya2.png" style="width: 75px; margin: 5px;">
         </div>
     </article>
 
