--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="https://i.ibb.co/kHvqFgz/icono.png">
+    <link rel="icon" href="https://i.ibb.co/WHwZh39/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -15,27 +15,29 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html" style="color:#ffffff;" font-family="'Lato', sans-serif !important;"  >Karen Quezada</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+       
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#aboutMe">Sobre Mi<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#myProjects">Mis Proyectos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#myTools">Mis Herramientas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contactMe">Contáctame</a>
-                </li>
-            </ul>
+            <a class="navbar-brand" href="index.html" style="color:#ffffff;" font-family="'Lato', sans-serif !important;"  >Karen Quezada</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+                aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+          <ul class="nav justify-content-center">
+            <li class="nav-item">
+              <a class="nav-link active" href="#aboutMe">Acerca de mi</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#myProjects">Mis Proyectos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#myTools">Mis Herramientas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#contactMe">Contáctame</a>
+            </li>
+          </ul>
         </div>
     </nav>
     <article id="aboutMe" style="margin: 0px 30px; padding:0px;">
